// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IssueFilingDialog render with isSettingsValid: false 1`] = `
<StyledWithResponsiveMode
  className="issue-filing-dialog"
  dialogContentProps={
    Object {
      "showCloseButton": false,
      "subText": "This configuration can be changed again in settings.",
      "subTextId": "issue-filing-dialog-subtext",
      "title": "Specify issue filing location",
      "titleId": "issue-filing-dialog-title",
      "type": 0,
    }
  }
  hidden={false}
  modalProps={
    Object {
      "containerClassName": "insights-dialog-main-override",
      "isBlocking": false,
    }
  }
  onDismiss={[Function]}
>
  <BugFilingSettingsContainer
    deps={
      Object {
        "bugFilingServiceProvider": null,
      }
    }
    selectedBugFilingService={
      Object {
        "isSettingsValid": [Function],
        "issueFilingUrlProvider": [Function],
      }
    }
    selectedBugFilingServiceData={
      Object {
        "someServiceData": null,
      }
    }
  />
  <StyledDialogFooterBase>
    <ActionAndCancelButtonsComponent
      cancelButtonOnClick={[Function]}
      isHidden={false}
      primaryButtonDisabled={true}
      primaryButtonHref="#"
      primaryButtonOnClick={[Function]}
      primaryButtonText="File issue"
    />
  </StyledDialogFooterBase>
</StyledWithResponsiveMode>
`;

exports[`IssueFilingDialog render with isSettingsValid: true 1`] = `
<StyledWithResponsiveMode
  className="issue-filing-dialog"
  dialogContentProps={
    Object {
      "showCloseButton": false,
      "subText": "This configuration can be changed again in settings.",
      "subTextId": "issue-filing-dialog-subtext",
      "title": "Specify issue filing location",
      "titleId": "issue-filing-dialog-title",
      "type": 0,
    }
  }
  hidden={false}
  modalProps={
    Object {
      "containerClassName": "insights-dialog-main-override",
      "isBlocking": false,
    }
  }
  onDismiss={[Function]}
>
  <BugFilingSettingsContainer
    deps={
      Object {
        "bugFilingServiceProvider": null,
      }
    }
    selectedBugFilingService={
      Object {
        "isSettingsValid": [Function],
        "issueFilingUrlProvider": [Function],
      }
    }
    selectedBugFilingServiceData={
      Object {
        "someServiceData": null,
      }
    }
  />
  <StyledDialogFooterBase>
    <ActionAndCancelButtonsComponent
      cancelButtonOnClick={[Function]}
      isHidden={false}
      primaryButtonDisabled={false}
      primaryButtonHref="test url"
      primaryButtonOnClick={[Function]}
      primaryButtonText="File issue"
    />
  </StyledDialogFooterBase>
</StyledWithResponsiveMode>
`;
